2007-1-3  Keishi Suenaga <skeishi@yahoo.co.jp>

	Fix -iW and timiditydrv.dll sound problem.
	* timidity/portaudio_a.c: remove broken acntl()s.

2007-1-1  Keishi Suenaga <skeishi@yahoo.co.jp>

	* timidity/timidity.c, timidity/w32_a.c,
	  timidity/portaudio_a.c: can select optput device.

2007-01-01  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Added support for GM2 Master Fine/Coarse Tuning, GS Master Tune
	  and XG Master Tuning (4C not 27) SysEx.
	* timidity/readmidi.c: Fix suspected typo.
	* libarc/unlzh.c: Reverted a useless fix of the previous commit.

2006-12-30  Keishi Suenaga <skeishi@yahoo.co.jp>

	* interfece/w32g_pref.c: can change timidity.cfg editor
	  by environment valuable TIMIDITY_CFG_EDITOR.

2006-12-29  Kentaro Sato <kentaro@ranvis.com>

	* timidity/controls.[ch]: Changed argument type of std_write().
	* timidity/midi_a.c: Imploved system independency.
	* libarc/unlzh.c: Fixed vulnerabilities named
	  CVE-2006-4335, CVE-2006-4337, CVE-2006-4338.

2006-12-27  Keishi Suenaga <skeishi@yahoo.co.jp>

	* timidity/portaudio_a.c: bug fix
	* interface/w32g_pref.c, interface/w32g_pref.h,
	  w32_portaudio_dll.c: asio dialog in win GUI.

2006-12-26  Keishi Suenaga <skeishi@yahoo.co.jp>

	* timidity/portaudio_a.c,
	  timidity/w32_portaudio_dll.c: fix portaudio v19 support
	  now use only one dll named portaudio.dll.

2006-12-23  Keishi Suenaga <skeishi@yahoo.co.jp>

	* windrv/Makefile.am, windrv/timiditydrv.c: free from idl
	* windrv/timiditydrv.idl: removed
	* windrv/oemsetup.inf: removed
	* doc/C/README.w32, doc/ja_JP.eucJP/README.w32: updated

2006-12-23  Keishi Suenaga <skeishi@yahoo.co.jp>

	* configure.in, doc/C/README.w32, doc/ja_JP.eucJP/README.w32,
	  interface/Makefile.am, interface/ncurs_c.c,
	  interface/rtsyn_common.c, interface/rtsyn_winmm.c,
	  interface/w32g_syn.c, interface/winsyn_c.c,
	  interface/wrdt_w32g.c, libarc/Makefile.am, libarc/url_file.c,