@@ -1,5 +1,5 @@
 # TiMidity++ -- MIDI to WAVE converter and player
-# Copyright (C) 1999-2002 Masanao Izumo <mo@goice.co.jp>
+# Copyright (C) 1999-2007 Masanao Izumo <iz@onicos.co.jp>
 # Copyright (C) 1995 Tuukka Toivonen <tt@cgs.fi>
 #
 # This program is free software; you can redistribute it and/or modify
@@ -14,7 +14,7 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
 include $(top_srcdir)/common.makefile.in
 
@@ -36,7 +36,6 @@ timidity_SOURCES = \
 	aq.c \
 	aq.h \
 	au_a.c \
-	midi_a.c \
 	audio_cnv.c \
 	audio_cnv.h \
 	common.c \
@@ -59,6 +58,7 @@ timidity_SOURCES = \
 	mid.defs \
 	miditrace.c \
 	miditrace.h \
+	midi_a.c \
 	mix.c \
 	mix.h \
 	mod.c \
